--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,16 +22,21 @@ FetchContent_MakeAvailable(googletest)
 
 find_package(CUDAToolkit REQUIRED)
 
+
+# Include directories
+include_directories(~/.local/include/cutensor ~/.local/include/)
+# Link directories
+link_directories( ~/.local/lib/cutensor)
+
 #set_property(TARGET ${PROJECT_NAME} PROPERTY CUDA_RUNTIME_LIBRARY Shared)
 
 set_source_files_properties(src/inverse.cpp PROPERTIES LANGUAGE CUDA)
 
 add_executable(main.x src/main.cpp src/inverse.cpp)
-add_executable(test.x src/test.cpp src/inverse.cpp)
-
+add_executable(test.x src/test.cpp src/inverse.cpp src/einsum.cpp)
 
 target_link_libraries(main.x CUDA::cudart CUDA::cublas CUDA::cusolver)
-target_link_libraries(test.x gtest_main CUDA::cudart CUDA::cusolver)
+target_link_libraries(test.x gtest_main CUDA::cudart CUDA::cusolver cutensor)
 
 enable_testing()
 include(GoogleTest)
