Reduced runtime by 30 ms 220ms -> 178ms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,8 @@ set_source_files_properties(src/inverse.cpp PROPERTIES LANGUAGE CUDA)
 set_source_files_properties(src/main.cpp PROPERTIES LANGUAGE CUDA)
 
 
-add_executable(main.x src/main.cpp src/inverse.cpp src/einsum.cpp src/inverse.cpp)
-add_executable(test.x src/test.cpp src/inverse.cpp src/einsum.cpp)
+add_executable(main.x src/main.cpp src/inverse.cpp src/inverse.cpp)
+add_executable(test.x src/test.cpp src/inverse.cpp  )
 
 target_link_libraries(main.x CUDA::cudart CUDA::cublas CUDA::cusolver cutensor)
 target_link_libraries(test.x gtest_main CUDA::cudart CUDA::cusolver cutensor)
