Start doing batch multiGPU prototype

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Set nvcc as cuda compiler
 set(CMAKE_CUDA_COMPILER nvcc)
-set(CMAKE_CUDA_ARCHITECTURES "72")
+#set(CMAKE_CUDA_ARCHITECTURES "native")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
-set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fopenmp ")
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3 -fopenmp -arch=native -G -lineinfo")
 
 include(FetchContent)
 FetchContent_Declare(
@@ -24,7 +24,7 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 find_package(CUDAToolkit REQUIRED)
-
+find_package(OpenMP REQUIRED)
 
 # Include directories
 include_directories(~/.local/include/cutensor ~/.local/include/)
@@ -35,13 +35,15 @@ link_directories( ~/.local/lib/cutensor)
 
 set_source_files_properties(src/inverse.cpp PROPERTIES LANGUAGE CUDA)
 set_source_files_properties(src/main.cpp PROPERTIES LANGUAGE CUDA)
-#set_source_files_properties(src/kernel.cpp PROPERTIES LANGUAGE CUDA)
+set_source_files_properties(src/batch.cpp PROPERTIES LANGUAGE CUDA)
 
 
 add_executable(main.x src/main.cpp src/kernel.cu src/inverse.cpp)
+add_executable(batch.x src/batch.cpp src/kernel.cu src/inverse.cpp)
 add_executable(test.x src/test.cpp src/inverse.cpp)
 
-target_link_libraries(main.x CUDA::cudart CUDA::cublas CUDA::cusolver cutensor)
+target_link_libraries(main.x CUDA::cudart CUDA::cublas CUDA::cusolver cutensor OpenMP::OpenMP_CXX)
+target_link_libraries(batch.x CUDA::cudart CUDA::cublas CUDA::cusolver cutensor OpenMP::OpenMP_CXX)
 target_link_libraries(test.x gtest_main CUDA::cudart CUDA::cusolver cutensor)
 
 enable_testing()
